# music-generation

./: dataset.py  generate.py  main.py  models.py  pyproject.toml  test.py  train.py  utils.py
data/: sample.mid  sample_output.mid
data/irish/: 10.mid  100.mid  1000.mid  101.mid  102.mid  103.mid  104.mid  105.mid  106.mid  107.mid  108.mid  109.mid  11.mid  110.mid  111.mid  112.mid  113.mid  114.mid  115.mid  116.mid  117.mid  118.mid  119.mid  12.mid  120.mid  121.mid  122.mid  123.mid  124.mid  125.mid  126.mid  127.mid  128.mid  129.mid  13.mid  130.mid  131.mid  132.mid  133.mid  134.mid  (+959 more)
